// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio checked set to false 1`] = `
.c2 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  background-color: currentColor;
  border: solid 1px #DEE1E5;
  border-color: currentColor;
  border-radius: 50%;
  color: transparent;
  height: 100%;
  position: relative;
  -webkit-transition: background-color 25ms linear,border-color 25ms linear,box-shadow 25ms linear;
  transition: background-color 25ms linear,border-color 25ms linear,box-shadow 25ms linear;
  width: 100%;
}

.c2::after {
  background: #fff;
  border-radius: 50%;
  content: '';
  height: 6px;
  position: absolute;
  right: calc(50% - 3px);
  top: calc(50% - 3px);
  width: 6px;
}

.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  height: 1rem;
  position: relative;
  width: 1rem;
}

.c0 input {
  background: #FFFFFF;
  height: 100%;
  opacity: 0;
  position: absolute;
  width: 100%;
  z-index: 1;
}

.c0 input:checked + .c1 {
  color: #6C43E0;
}

.c0 input:not(:checked) + .c1 {
  background: #FFFFFF;
  border-color: #DEE1E5;
}

.c0 input:focus + .c1 {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c0 input:disabled + .c1 {
  color: #939BA5;
}

.c0 input:disabled:not(:checked) + .c1 {
  background: #F5F6F7;
}

.c0 input:disabled:not(:checked) + .c1::after {
  background: #F5F6F7;
}

<div
  className="c0"
>
  <input
    checked={false}
    id="radioID"
    type="radio"
  />
  <div
    className="c1 c2"
  />
</div>
`;

exports[`Radio checked set to true 1`] = `
.c2 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  background-color: currentColor;
  border: solid 1px #DEE1E5;
  border-color: currentColor;
  border-radius: 50%;
  color: transparent;
  height: 100%;
  position: relative;
  -webkit-transition: background-color 25ms linear,border-color 25ms linear,box-shadow 25ms linear;
  transition: background-color 25ms linear,border-color 25ms linear,box-shadow 25ms linear;
  width: 100%;
}

.c2::after {
  background: #fff;
  border-radius: 50%;
  content: '';
  height: 6px;
  position: absolute;
  right: calc(50% - 3px);
  top: calc(50% - 3px);
  width: 6px;
}

.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  height: 1rem;
  position: relative;
  width: 1rem;
}

.c0 input {
  background: #FFFFFF;
  height: 100%;
  opacity: 0;
  position: absolute;
  width: 100%;
  z-index: 1;
}

.c0 input:checked + .c1 {
  color: #6C43E0;
}

.c0 input:not(:checked) + .c1 {
  background: #FFFFFF;
  border-color: #DEE1E5;
}

.c0 input:focus + .c1 {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c0 input:disabled + .c1 {
  color: #939BA5;
}

.c0 input:disabled:not(:checked) + .c1 {
  background: #F5F6F7;
}

.c0 input:disabled:not(:checked) + .c1::after {
  background: #F5F6F7;
}

<div
  className="c0"
>
  <input
    checked={true}
    id="radioID"
    type="radio"
  />
  <div
    className="c1 c2"
  />
</div>
`;

exports[`Radio default 1`] = `
.c2 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  background-color: currentColor;
  border: solid 1px #DEE1E5;
  border-color: currentColor;
  border-radius: 50%;
  color: transparent;
  height: 100%;
  position: relative;
  -webkit-transition: background-color 25ms linear,border-color 25ms linear,box-shadow 25ms linear;
  transition: background-color 25ms linear,border-color 25ms linear,box-shadow 25ms linear;
  width: 100%;
}

.c2::after {
  background: #fff;
  border-radius: 50%;
  content: '';
  height: 6px;
  position: absolute;
  right: calc(50% - 3px);
  top: calc(50% - 3px);
  width: 6px;
}

.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  height: 1rem;
  position: relative;
  width: 1rem;
}

.c0 input {
  background: #FFFFFF;
  height: 100%;
  opacity: 0;
  position: absolute;
  width: 100%;
  z-index: 1;
}

.c0 input:checked + .c1 {
  color: #6C43E0;
}

.c0 input:not(:checked) + .c1 {
  background: #FFFFFF;
  border-color: #DEE1E5;
}

.c0 input:focus + .c1 {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c0 input:disabled + .c1 {
  color: #939BA5;
}

.c0 input:disabled:not(:checked) + .c1 {
  background: #F5F6F7;
}

.c0 input:disabled:not(:checked) + .c1::after {
  background: #F5F6F7;
}

<div
  className="c0"
>
  <input
    id="radioID"
    type="radio"
  />
  <div
    className="c1 c2"
  />
</div>
`;

exports[`Radio should accept disabled 1`] = `
.c2 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  background-color: currentColor;
  border: solid 1px #DEE1E5;
  border-color: currentColor;
  border-radius: 50%;
  color: transparent;
  height: 100%;
  position: relative;
  -webkit-transition: background-color 25ms linear,border-color 25ms linear,box-shadow 25ms linear;
  transition: background-color 25ms linear,border-color 25ms linear,box-shadow 25ms linear;
  width: 100%;
}

.c2::after {
  background: #fff;
  border-radius: 50%;
  content: '';
  height: 6px;
  position: absolute;
  right: calc(50% - 3px);
  top: calc(50% - 3px);
  width: 6px;
}

.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  height: 1rem;
  position: relative;
  width: 1rem;
}

.c0 input {
  background: #FFFFFF;
  cursor: not-allowed;
  height: 100%;
  opacity: 0;
  position: absolute;
  width: 100%;
  z-index: 1;
}

.c0 input:checked + .c1 {
  color: #6C43E0;
}

.c0 input:not(:checked) + .c1 {
  background: #FFFFFF;
  border-color: #DEE1E5;
}

.c0 input:focus + .c1 {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c0 input:disabled + .c1 {
  color: #939BA5;
}

.c0 input:disabled:not(:checked) + .c1 {
  background: #F5F6F7;
}

.c0 input:disabled:not(:checked) + .c1::after {
  background: #F5F6F7;
}

<div
  className="c0"
>
  <input
    disabled={true}
    id="radioID"
    type="radio"
  />
  <div
    className="c1 c2"
  />
</div>
`;

exports[`Radio with aria-describedby 1`] = `
.c2 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  background-color: currentColor;
  border: solid 1px #DEE1E5;
  border-color: currentColor;
  border-radius: 50%;
  color: transparent;
  height: 100%;
  position: relative;
  -webkit-transition: background-color 25ms linear,border-color 25ms linear,box-shadow 25ms linear;
  transition: background-color 25ms linear,border-color 25ms linear,box-shadow 25ms linear;
  width: 100%;
}

.c2::after {
  background: #fff;
  border-radius: 50%;
  content: '';
  height: 6px;
  position: absolute;
  right: calc(50% - 3px);
  top: calc(50% - 3px);
  width: 6px;
}

.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  height: 1rem;
  position: relative;
  width: 1rem;
}

.c0 input {
  background: #FFFFFF;
  height: 100%;
  opacity: 0;
  position: absolute;
  width: 100%;
  z-index: 1;
}

.c0 input:checked + .c1 {
  color: #6C43E0;
}

.c0 input:not(:checked) + .c1 {
  background: #FFFFFF;
  border-color: #DEE1E5;
}

.c0 input:focus + .c1 {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c0 input:disabled + .c1 {
  color: #939BA5;
}

.c0 input:disabled:not(:checked) + .c1 {
  background: #F5F6F7;
}

.c0 input:disabled:not(:checked) + .c1::after {
  background: #F5F6F7;
}

<div
  className="c0"
>
  <input
    aria-describedby="some-id"
    id="radioID"
    type="radio"
  />
  <div
    className="c1 c2"
  />
</div>
`;

exports[`Radio with name and id 1`] = `
.c2 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  background-color: currentColor;
  border: solid 1px #DEE1E5;
  border-color: currentColor;
  border-radius: 50%;
  color: transparent;
  height: 100%;
  position: relative;
  -webkit-transition: background-color 25ms linear,border-color 25ms linear,box-shadow 25ms linear;
  transition: background-color 25ms linear,border-color 25ms linear,box-shadow 25ms linear;
  width: 100%;
}

.c2::after {
  background: #fff;
  border-radius: 50%;
  content: '';
  height: 6px;
  position: absolute;
  right: calc(50% - 3px);
  top: calc(50% - 3px);
  width: 6px;
}

.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  height: 1rem;
  position: relative;
  width: 1rem;
}

.c0 input {
  background: #FFFFFF;
  height: 100%;
  opacity: 0;
  position: absolute;
  width: 100%;
  z-index: 1;
}

.c0 input:checked + .c1 {
  color: #6C43E0;
}

.c0 input:not(:checked) + .c1 {
  background: #FFFFFF;
  border-color: #DEE1E5;
}

.c0 input:focus + .c1 {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c0 input:disabled + .c1 {
  color: #939BA5;
}

.c0 input:disabled:not(:checked) + .c1 {
  background: #F5F6F7;
}

.c0 input:disabled:not(:checked) + .c1::after {
  background: #F5F6F7;
}

<div
  className="c0"
>
  <input
    id="Chuck"
    name="Chuck"
    type="radio"
  />
  <div
    className="c1 c2"
  />
</div>
`;
